--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,4 @@
-<%= link_to 'Stories', stories_path
+<%= link_to 'Reviews', reviews_path %>
+<%= link_to 'Fanfics', fanfics_path %>
+<%= link_to 'Tags', tags_path %>
+<%= link_to 'Users', users_path %>
