--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,16 @@ h1 {
   font-family: 'Oswald', cursive;
   font-size: 5.5em;
   text-align: center;
-  margin: 8px 0 0 0;
+  margin: 0;
+}
+
+.content {
+  border: 4px solid #333;
+  margin: 35px auto;
+}
+
+nav {
+  margin-bottom: 0.9375rem;
 }
 
 
