looking good, time to try bourbon

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,38 @@
+<div class="home row">
+  <div class="small-6 columns home-reviews">
+    <h3>Newest Reviews</h3>
+    <ul>
+      <% 10.times do %>
+        <li>
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+        </li>
+      <% end %>
+    </ul>
+  </div>
+  <div class="small-6 columns home-stories">
+    <h3>Top Users</h3>
 
+    <h3>Trending Tags</h3>
+
+
+    <h3>Updated Stories</h3>
+    <ul>
+      <% 10.times do %>
+        <li>Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+          Lorem ipsum dolores spurd.
+        </li>
+      <% end %>
+    </ul>
+  </div>
+</div>
