--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -3,20 +3,55 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 h1 {
-  font-family: 'Oswald', cursive;
-  font-size: 5.5em;
+  font-size: 6.5em;
   text-align: center;
   margin: 0;
+
+  a:first-child{
+    color: inherit !important;
+  }
+
+  a:last-child {
+  }
 }
+
+h3 {}
 
 .content {
   border: 4px solid #333;
   margin: 35px auto;
+  background: white;
+}
+
+body {
+  background: #f9f9f9;
 }
 
 nav {
   margin-bottom: 0.9375rem;
 }
+
+.home > .columns:not(:last-child) {
+  border-right: 4px solid #333;
+}
+
+.home-reviews li, .home-stories li {
+  margin-bottom: 1em;
+  list-style-type: none;
+
+}
+
+.profile-pic {
+  background: #82a7db;
+  padding: .1em;
+  border-radius: 0.1875em;
+  width: 35px;
+  height: 35px;
+  margin-right: -3px;
+  margin-bottom: 2px;
+}
+
+
 
 
 
