--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -1310,7 +1310,7 @@ $include-html-global-classes: $include-html-classes;
 
 // $has-tip-border-bottom: dotted 1px #ccc;
 // $has-tip-font-weight: $font-weight-bold;
-// $has-tip-font-color: #333;
+ $has-tip-font-color: #008cba;
 // $has-tip-border-bottom-hover: dotted 1px scale-color($primary-color, $lightness: -55%);
 // $has-tip-font-color-hover: $primary-color;
 // $has-tip-cursor-type: help;
