--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,17 @@
   <%# Modernizr is required for Zurb Foundation %>
   <%= javascript_include_tag 'vendor/modernizr' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>  <%= csrf_meta_tags %>
+  <link href='http://fonts.googleapis.com/css?family=Oswald|Open+Sans' rel='stylesheet' type='text/css'>  <%= csrf_meta_tags %>
 </head>
 <body>
 <div class="row content">
   <div class="small-12 columns">
 
     <div class="row header">
-      <div class="small-12">
-        <h1>HPFic<%= link_to "*", "/about" %></h1>
+      <div class="small-12 columns">
+        <h1><%= link_to "HPFic", root_path %><a data-tooltip class="has-tip [tip-right]"
+             title="Welcome to HPFic, a better way to rate and review Harry Potter Fanfiction.">*</a>
+        </h1>
       </div>
     </div>
 
@@ -25,15 +27,13 @@
 
     <div class="row">
       <div class="small-12 columns">
-        <%= render 'layouts/breadcrumbs' %>
+        <%= render 'layouts/messages' %>
+        <%= yield %>
       </div>
     </div>
 
 
-    <main role="main">
-      <%= render 'layouts/messages' %>
-      <%= yield %>
-    </main>
+
   </div>
 </div>
 </body>
