--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Reviews#index</h1>
-<p>Find me in app/views/reviews/index.html.erb</p>
+<table>
+  <thead>
+  <tr>
+    <th width="71">User</th>
+    <th width="67">Rating</th>
+    <th width="200">Fanfic</th>
+    <th>Review</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr>
+    <td>10</td>
+    <td>9</td>
+    <td>Content Goes Here</td>
+    <td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+
+  </tr>
+  <tr>
+    <td>101</td>
+    <td>6</td>
+    <td>Content Goes Here</td>
+    <td>This is longer content Donec id elit non mi porta gravida at eget metus.
+      d elit non mi porta gravida at eget metusd elit non mi porta
+      gravida at eget metusDonec id elit non mi porta gravida at eget metus
+      .  Donec id elit non mi porta gravida at eget metus...</td>
+  </tr>
+  <tr>
+    <td>349</td>
+    <td>8</td>
+    <td>Content Goes Here</td>
+    <td>This is longer content Donec id elit non mi porta gravida at eget metus.</td>
+  </tr>
+  </tbody>
+</table>
