--- a/app/views/refills/_comments.html.erb
+++ b/app/views/refills/_comments.html.erb
@@ -3,9 +3,12 @@
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
   </div>
   <div class="comment-content">
-    <h1>First Comment Title or Author</h1>
+    <h1>
+      First Comment Title or Author |
+      <span class="comment-stars"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
+    </h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.</p>
-    <p class="comment-detail">Date or details about this post</p>
+    <p class="comment-detail">posted 36 minutes ago by <%= link_to 'draconianDemocracy', '#' %></p>
   </div>
 </div>
 
@@ -14,8 +17,10 @@
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_2.png" alt="">
   </div>
   <div class="comment-content">
-    <h1>Another One</h1>
+    <h1>Another One |
+      <span class="comment-stars"><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i></span>
+    </h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, aspernatur, quia modi minima debitis tempora ducimus quam vero impedit alias earum nemo error tenetur sed.</p>
-    <p class="comment-detail">Date or details about this post</p>
+    <p class="comment-detail">posted 3 weeks ago by <%= link_to '499449', '#' %></p>
   </div>
 </div>
