--- a/app/assets/stylesheets/refills/_comments.scss
+++ b/app/assets/stylesheets/refills/_comments.scss
@@ -13,6 +13,10 @@
   padding-bottom: 1em;
   border-bottom: 1px solid transparentize($comment-color, .9);
 
+  &:first-child {
+    padding-top: 1em;
+  }
+
   .comment-image,
   .comment-content {
     display: table-cell;
