--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -1,21 +1,19 @@
 <header class="navigation">
-  <div class="menu-wrapper">
+  <div class="navigation-wrapper">
     <a href="javascript:void(0)" class="logo">
-      <img src="https://raw.github.com/Magnus-G/Random/master/placeholder_logo_1.png" alt="">
+      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
     </a>
-    <p class="navigation-menu-button" id="js-mobile-menu">MENU</p>
+    <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Products</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
-        <li class="nav-link more"><a href="javascript:void(0)">More</a>
-          <ul class="submenu">
-            <li><a href="javascript:void(0)">Submenu Item</a></li>
-            <li><a href="javascript:void(0)">Another Item</a></li>
-          </ul>
-        </li>
-        
+        <li class="nav-link"><a href="javascript:void(0)">Reviews</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Stories</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Users</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Tags</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Submit</a></li>
+
+
+
       </ul>
     </div>
     <div class="navigation-tools">
@@ -23,17 +21,18 @@
         <div class="search-and-submit">
           <input type="search" placeholder="Enter Search" />
           <button type="submit">
-            <img src="https://raw.githubusercontent.com/Magnus-G/Random/master/search-icon.png" alt="">
+            <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/search-icon.png" alt="">
           </button>
         </div>
       </div>
-      <a href="javascript:void(0)" class="sign-up">Sign Up</a>
+      <a href="javascript:void(0)" class="sign-up">Sign Up &middot; Login</a>
     </div>
   </div>
 </header>
 
+
 <script>
-  $(function() {
+  $(document).ready(function() {
     var menu = $('#navigation-menu');
     var menuToggle = $('#js-mobile-menu');
     var signUp = $('.sign-up');
@@ -52,8 +51,9 @@
       $(".nav .nav-link").each(function() {
         $(this).removeClass("active-nav-item");
       });
-      $(this).addClass("active-nav-item"); 
+      $(this).addClass("active-nav-item");
       $(".nav .more").removeClass("active-nav-item");
     });
   });
+
 </script>
