--- a/app/assets/stylesheets/refills/_pagination.scss
+++ b/app/assets/stylesheets/refills/_pagination.scss
@@ -5,6 +5,10 @@
   $pagination-hover-background: lighten($pagination-background, 5);
   $pagination-color: $base-font-color;
 
+
+
+  text-align: center;
+
   ul {
     display: inline;
     text-align: center;
