preparing for push

--- a/app/views/fanfics/index.html.erb
+++ b/app/views/fanfics/index.html.erb
@@ -1,1 +1,7 @@
+<%= render 'refills/dropdown' %>
 
+<% 10.times do %>
+  <%= render 'refills/cards' %>
+<% end %>
+
+<%= render 'refills/pagination' %>
