--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Tags#index</h1>
-<p>Find me in app/views/tags/index.html.erb</p>
+<%= render 'refills/dropdown' %>
+
+<% 30.times do %>
+  <%= render 'refills/badges' %>
+<% end %>
+
