--- a/app/views/refills/_cards.html.erb
+++ b/app/views/refills/_cards.html.erb
@@ -1,8 +1,5 @@
 <div class="cards">
   <div class="card">
-    <div class="card-image">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains.png" alt="">
-    </div>
     <div class="card-header">
       First Card
     </div>
@@ -20,14 +17,19 @@
 
   <div class="card">
     <div class="ribbon-wrapper"><div class="ribbon">RIBBON</div></div>
-    <div class="card-image">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains-4.png" alt="">
-    </div>
     <div class="card-header">
       Another Card
     </div>
     <div class="card-copy">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+    </div>
+    <div class="card-tags">
+      <span class="tag">#Manip!Dumbledore</span>
+      <span class="tag">#Harry/Daphne</span>
+      <span class="tag">#Slash</span>
+      <span class="tag">#Smart!Harry</span>
+      <span class="tag">#Angst</span>
+      <span class="tag">#Sadness</span>
     </div>
     <div class="card-stats">
       <ul>
@@ -39,9 +41,6 @@
   </div>
 
   <div class="card">
-    <div class="card-image">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/mountains-3.png" alt="">
-    </div>
     <div class="card-header">
       The Last Card
     </div>
