--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,6 +1,7 @@
 <%= render 'refills/dropdown' %>
 
 <% 30.times do %>
-  <%= render 'refills/badges' %>
+  <span class="tag">Manip!Dumbledore</span>
 <% end %>
+
 
