reviews tag look fine

--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,7 +1,9 @@
-<%= render 'refills/dropdown' %>
+<div class="tags">
+  <%= render 'refills/dropdown' %>
 
-<% 30.times do %>
-  <span class="tag">Manip!Dumbledore</span>
-<% end %>
+  <% 30.times do %>
+    <span class="tag">Manip!Dumbledore</span>
+  <% end %>
+</div>
 
 
