--- a/app/assets/stylesheets/partials/_tags.scss
+++ b/app/assets/stylesheets/partials/_tags.scss
@@ -1,7 +1,6 @@
 .tag {
   border: 1px solid #ddd;
   border-radius: 0.1875em;
-  background: #f7f7f7;
   line-height: 1em;
   display: inline-block;
   padding: 0.5em 0.6em;
@@ -10,11 +9,18 @@
   font-size: .75em;
   color: #477dca;
   transition: .5s all;
+  background: #fff;
   &:hover {
     background: #fff;
   }
 }
 
 .card-tags {
-  padding: .5em;
+  padding: 0 0.809em 0.75em 0.809em;
+}
+
+.tags .tag {
+  line-height: 1.5em;
+  background: #f5f5f5;
+  font-size: 1em;
 }
