--- a/app/assets/stylesheets/refills/_cards.scss
+++ b/app/assets/stylesheets/refills/_cards.scss
@@ -77,10 +77,15 @@
     padding: $base-line-height/2 $gutter/2;
     font-size: .9em;
     line-height: 1.5em;
+
+    p {
+      margin: 0;
+    }
   }
 
   .card-stats {
     padding: $base-line-height/2 $gutter/2;
+    padding-top: 0;
     overflow: auto;
 
     ul li {
