--- a/app/views/refills/_cards.html.erb
+++ b/app/views/refills/_cards.html.erb
@@ -16,7 +16,7 @@
   </div>
 
   <div class="card">
-    <div class="ribbon-wrapper"><div class="ribbon">RIBBON</div></div>
+    <div class="ribbon-wrapper"><div class="ribbon">Staff Pick</div></div>
     <div class="card-header">
       Another Card
     </div>
@@ -33,9 +33,9 @@
     </div>
     <div class="card-stats">
       <ul>
-        <li>98<span>Items</span></li>
-        <li>298<span>Things</span></li>
-        <li>923<span>Objects</span></li>
+        <li>97%<span>Rating</span></li>
+        <li>298k<span>Words</span></li>
+        <li>05/12/13<span>Released</span></li>
       </ul>
     </div>
   </div>
