--- a/app/views/refills/_cards.html.erb
+++ b/app/views/refills/_cards.html.erb
@@ -19,6 +19,7 @@
     <div class="ribbon-wrapper"><div class="ribbon">Staff Pick</div></div>
     <div class="card-header">
       Another Card
+      <div class="card-update">Updated 35 minutes ago</div>
     </div>
     <div class="card-copy">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
