--- a/app/assets/stylesheets/refills/_cards.scss
+++ b/app/assets/stylesheets/refills/_cards.scss
@@ -73,6 +73,12 @@
     padding: $base-line-height/3 $gutter/2;
   }
 
+  .card-update {
+    font-size: .75em;
+    font-weight: normal;
+    font-style: italic;
+  }
+
   .card-copy {
     padding: $base-line-height/2 $gutter/2;
     font-size: .9em;
