--- a/app/views/refills/_cards.html.erb
+++ b/app/views/refills/_cards.html.erb
@@ -27,7 +27,7 @@
     <div class="card-tags">
       <span class="tag">#Manip!Dumbledore</span>
       <span class="tag">#Harry/Daphne</span>
-      <span class="tag">#Slash</span>
+      <span class="tag slash">#Slash</span>
       <span class="tag">#Smart!Harry</span>
       <span class="tag">#Angst</span>
       <span class="tag">#Sadness</span>
