--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 <%= render 'refills/navigation' %>
 
-<%#= render 'refills/search_tools' %>
+<%= render 'layouts/welcome' %>
 
 <%= render 'layouts/messages' %>
 
