home page is hard

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,9 @@
 
 <div class="home">
-
-  <h1></h1>
+  <%= render 'layouts/welcome' %>
 
   <%= render 'refills/vertical_tabs' %>
+
+  <%= render 'refills/accordian_tabs' %>
+
 </div>
