--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -2,6 +2,6 @@
   <div class="welcome-wrapper">
     Welcome to HPFic, my humble attempt at making a platform for rating and reviewing Harry Potter Fanfiction.
     First time here? <%= link_to "Sign up" %> and start <%= link_to "submitting" %>
-    or <%= link_to "reviewing" %> fanfics. Trying to bootstrap this site off the ground, and any support helps!
+    or <%= link_to "reviewing" %> fanfics. Happy reading!
   </div>
 </div>
