--- a/app/views/refills/_card.html.erb
+++ b/app/views/refills/_card.html.erb
@@ -1,16 +1,24 @@
-<div class="fanfic card">
-  <div class="ribbon-wrapper"><div class="ribbon">TOP 40</div></div>
+<div class="card">
+  <div class="ribbon-wrapper"><div class="ribbon">Staff Pick</div></div>
   <div class="card-header">
-    Another Card
+Harry Potter and the Methods of Rationality    <div class="card-update">Updated 35 minutes ago</div>
   </div>
   <div class="card-copy">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
   </div>
+  <div class="card-tags">
+    <span class="tag">#Manip!Dumbledore</span>
+    <span class="tag">#Harry/Daphne</span>
+    <span class="tag slash">#Slash</span>
+    <span class="tag">#Smart!Harry</span>
+    <span class="tag">#Angst</span>
+    <span class="tag">#Sadness</span>
+  </div>
   <div class="card-stats">
     <ul>
-      <li>98<span>Items</span></li>
-      <li>298<span>Things</span></li>
-      <li>923<span>Objects</span></li>
+      <li>97%<span>Rating</span></li>
+      <li>298k<span>Words</span></li>
+      <li>05/12/13<span>Released</span></li>
     </ul>
   </div>
 </div>
