--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,14 +6,14 @@
 
   <div class="home-feed">
     <div class="home-reviews">
-      <h2 class="home-title">Trending Fanfics</h2>
+      <h2 class="home-title">Trending Fanfics <button class="home-button button">see all >></button></h2>
       <% 10.times do %>
         <%= render 'refills/card' %>
       <% end %>
     </div>
 
     <div class="home-comments">
-      <h2 class="home-title">Trending Reviews</h2>
+      <h2 class="home-title">Trending Reviews <button class="home-button button">see all >></button></h2>
       <% 10.times do %>
         <%= render 'refills/comments' %>
       <% end %>
