--- a/app/assets/stylesheets/refills/_navigation.scss
+++ b/app/assets/stylesheets/refills/_navigation.scss
@@ -22,7 +22,7 @@ header.navigation {
 
   .navigation-wrapper {
     @include clearfix;
-//    @include outer-container;
+    @include outer-container;
     position: relative;
     z-index: 9999;
   }
