--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,3 +1,6 @@
+<div class="notice">Users who have read Harry Potter and the Methods of rationality have also read: "Jungle in the Bungle",
+"Lily Potter and the Art of Being Sysyphus", "Wand (SI)"</div>
+
 <%= render 'refills/card' %>
 
 <form class="review-form">
