--- a/app/assets/stylesheets/refills/_cards.scss
+++ b/app/assets/stylesheets/refills/_cards.scss
@@ -85,13 +85,13 @@
     line-height: 1.5em;
 
     p {
-      margin: 0;
+//      margin: 0;
     }
   }
 
   .card-stats {
     padding: $base-line-height/2 $gutter/2;
-    padding-top: 0;
+//    padding-top: 0;
     overflow: auto;
 
     ul li {
