--- a/app/assets/stylesheets/refills/_footer.scss
+++ b/app/assets/stylesheets/refills/_footer.scss
@@ -1,15 +1,27 @@
-.footer-2 {
+footer {
   $footer-background: desaturate(darken($base-accent-color, 20), 30);
+  background: $footer-background;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 80px;
+}
+
+.footer-2 {
   $footer-color: white;
   $footer-link-color: transparentize($footer-color, .6);
   $footer-disclaimer-color: transparentize($footer-color, .6);
 
-  background: $footer-background;
   padding: $base-line-height;
   width: 100%;
+  max-width: 68em;
 
-  position: absolute;
-  bottom: 0px;
+
+  margin: 0 auto;
+
+
 
   .footer-logo {
     margin-right: 1em;
