--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,18 +5,27 @@
 
 
   <div class="home-feed">
-    <div class="home-reviews">
-      <h2 class="home-title">Trending Fanfics <button class="home-button button">see all >></button></h2>
-      <% 10.times do %>
-        <%= render 'refills/card' %>
-      <% end %>
+
+    <div class="home-reviews-wrapper">
+      <h3 class="home-title">Just Added Fanfics
+        <button class="home-button button">see all >></button>
+      </h3>
+      <div class="home-reviews">
+        <% 10.times do %>
+          <%= render 'refills/card' %>
+        <% end %>
+      </div>
     </div>
 
-    <div class="home-comments">
-      <h2 class="home-title">Trending Reviews <button class="home-button button">see all >></button></h2>
-      <% 10.times do %>
-        <%= render 'refills/comments' %>
-      <% end %>
+    <div class="home-comments-wrapper">
+      <h3 class="home-title">Trending Reviews
+        <button class="home-button button">see all >></button>
+      </h3>
+      <div class="home-comments">
+        <% 10.times do %>
+          <%= render 'refills/comments' %>
+        <% end %>
+      </div>
     </div>
   </div>
 
