added links to nav

--- a/app/views/layouts/_welcome.html.erb
+++ b/app/views/layouts/_welcome.html.erb
@@ -1,6 +1,6 @@
 <div class="welcome notice">
   <div class="welcome-wrapper">
-    Welcome to HPFic, my humble attempt at making a platform for rating and reviewing Harry Potter Fanfiction.
+    Welcome to HPFic, my humble attempt at making a Harry Potter Fanfiction review website.
     First time here? <%= link_to "Sign up" %> and start <%= link_to "submitting" %>
     or <%= link_to "reviewing" %> fanfics. Happy reading!
   </div>
