--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -1,18 +1,15 @@
 <header class="navigation">
   <div class="navigation-wrapper">
-    <a href="javascript:void(0)" class="logo">
+    <%= link_to root_path, class: "logo" do %>
       <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
-    </a>
+    <% end %>
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Reviews</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Stories</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Tags</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Submit</a></li>
-
-
-
+        <li class="nav-link"><%= link_to "Reviews", reviews_path %></li>
+        <li class="nav-link"><%= link_to "Fanfics", fanfics_path %></li>
+        <li class="nav-link"><%= link_to "Tags", tags_path %></li>
+        <li class="nav-link"><%= link_to "Submit", new_fanfic_path %></li>
       </ul>
     </div>
     <div class="navigation-tools">
