--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -21,7 +21,7 @@
           </button>
         </div>
       </div>
-      <a href="javascript:void(0)" class="sign-up">Sign Up &middot; Login</a>
+      <%= link_to "Sign Up / Login", new_user_registration_path, class: "sign-up" %>
     </div>
   </div>
 </header>
