added username to user, added views for login and signup, styled

--- a/app/assets/stylesheets/refills/_navigation.scss
+++ b/app/assets/stylesheets/refills/_navigation.scss
@@ -279,6 +279,10 @@ header.navigation {
     &:hover {
       background: lighten($navigation-nav-button-background, 10);
     }
+
+    + .sign-up {
+      margin-right: .6em;
+    }
   }
 
   // Search bar
