--- a/app/views/refills/_navigation.html.erb
+++ b/app/views/refills/_navigation.html.erb
@@ -21,7 +21,9 @@
           </button>
         </div>
       </div>
-      <%= link_to "Sign Up / Login", new_user_registration_path, class: "sign-up" %>
+      <%= link_to "Login", new_user_session_path, class: "sign-up" %>
+      <%= link_to "Sign Up", new_user_registration_path, class: "sign-up" %>
+
     </div>
   </div>
 </header>
