--- a/app/views/fanfics/new.html.erb
+++ b/app/views/fanfics/new.html.erb
@@ -1,1 +1,8 @@
-<%= form
+<%= simple_form_for @fanfic do |f| %>
+  <%= f.input :title %>
+  <%= f.input :author %>
+  <%= f.input :description %>
+  <%= f.input :word_count %>
+  <%= f.input :published %>
+  <%= f.input :updated %>
+<% end %>
