--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,6 +10,7 @@
       <h3 class="home-title">Just Added Fanfics
         <button class="home-button button">see all >></button>
       </h3>
+      <i>updated 30 minutes ago</i>
       <div class="home-reviews">
         <% 10.times do %>
           <%= render 'refills/card' %>
@@ -21,6 +22,7 @@
       <h3 class="home-title">Trending Reviews
         <button class="home-button button">see all >></button>
       </h3>
+      <i>updated 30 minutes ago</i>
       <div class="home-comments">
         <% 10.times do %>
           <%= render 'refills/comments' %>
