transitioning away from refills directory

--- a/app/views/fanfics/index.html.erb
+++ b/app/views/fanfics/index.html.erb
@@ -1,7 +1,7 @@
-<%= render 'refills/dropdown' %>
+<%= render 'layouts/dropdown' %>
 
 <% 10.times do %>
-  <%= render 'refills/cards' %>
+  <%= render 'fanfic' %>
 <% end %>
 
-<%= render 'refills/pagination' %>
+<%= render 'layouts/pagination' %>
