--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,7 +1,7 @@
 <div class="notice">Users who have read Harry Potter and the Methods of rationality have also read: "Jungle in the Bungle",
 "Lily Potter and the Art of Being Sysyphus", "Wand (SI)"</div>
 
-<%= render 'refills/card' %>
+<%= render 'fanfics/fanfic' %>
 
 <form class="review-form">
   <span class="comment-stars rating">
@@ -15,5 +15,5 @@
 </form>
 
 <% 10.times do %>
-<%= render 'refills/comments' %>
+<%= render 'comments/show' %>
 <% end %>
