--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,5 +1,5 @@
 <div class="tags">
-  <%= render 'refills/dropdown' %>
+  <%= render 'layouts/dropdown' %>
 
   <% 30.times do %>
     <span class="tag">Manip!Dumbledore</span>
