--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <body>
 
 
-<%= render 'refills/navigation' %>
+<%= render 'layouts/navigation' %>
 
 
 <%= render 'layouts/messages' %>
@@ -24,7 +24,7 @@
 
 
 <footer>
-  <%= render 'refills/footer' %>
+  <%= render 'layouts/footer' %>
 </footer>
 
 
