--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,7 +1,7 @@
-<%= render 'refills/dropdown' %>
+<%= render 'layouts/dropdown' %>
 
 <% 10.times do %>
-  <%= render 'refills/comments' %>
+  <%= render 'layouts/comments' %>
 <% end %>
 
-<%= render 'refills/pagination' %>
+<%= render 'layouts/pagination' %>
