--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,31 @@
+@import "font-awesome";
 @import "bourbon";
 @import "base/base";
 @import "neat";
-@import "refills/refills";
 
-@import "partials/partials";
-@import "font-awesome";
+@import "refills/accordian-tabs";
+@import "refills/badges";
+@import "refills/button-group";
+@import "refills/cards";
+@import "refills/comments";
+@import "refills/dropdown";
+@import "refills/footer";
+@import "refills/grid";
+@import "refills/hero";
+@import "refills/navigation";
+@import "refills/pagination";
+@import "refills/search-tools";
+@import "refills/vertical-tabs";
+
+@import "partials/authenticate";
+@import "partials/normalize";
+@import "partials/flash";
+@import "partials/home";
+@import "partials/tags";
+@import "partials/users";
+
+
+
 
 
 
