--- a/app/views/fanfics/index.html.erb
+++ b/app/views/fanfics/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'layouts/dropdown' %>
 
 <% 10.times do %>
-  <%= render 'fanfic' %>
+  <%= render 'fanfics/show' %>
 <% end %>
 
 <%= render 'layouts/pagination' %>
