--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <div class="home">
-  <%#= render fanfics_path %>
+  <% 30.times do %>
+    <%= render 'fanfics/fanfic_card' %>
+  <% end %>
 </div>
