--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,9 @@
     <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
   </div>
   <ul>
-    <li><a href="javascript:void(0)">About</a></li>
-    <li><a href="javascript:void(0)">Contact</a></li>
-    <li><a href="javascript:void(0)">Products</a></li>
+    <li><a href="javascript:void(0)">Reviews</a></li>
+    <li><a href="javascript:void(0)">Fanfics</a></li>
+    <li><a href="javascript:void(0)">Tags</a></li>
   </ul>
 
   <div class="footer-secondary-links">
@@ -14,16 +14,16 @@
       <li><a href="javascript:void(0)">Privacy Policy</a></li>
     </ul>
 
-    <ul class="footer-social">
-      <li><a href="javascript:void(0)">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="">
-      </a></li>
-      <li><a href="javascript:void(0)">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="">
-      </a></li>
-      <li><a href="javascript:void(0)">
-        <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="">
-      </a></li>
-    </ul>
+    <!--<ul class="footer-social">-->
+      <!--<li><a href="javascript:void(0)">-->
+        <!--<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="">-->
+      <!--</a></li>-->
+      <!--<li><a href="javascript:void(0)">-->
+        <!--<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="">-->
+      <!--</a></li>-->
+      <!--<li><a href="javascript:void(0)">-->
+        <!--<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="">-->
+      <!--</a></li>-->
+    <!--</ul>-->
   </div>
 </footer>
