header height problem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,11 +18,12 @@
 @import "refills/vertical-tabs";
 
 @import "partials/authenticate";
-@import "partials/normalize";
+@import "partials/globals";
 @import "partials/flash";
 @import "partials/home";
 @import "partials/tags";
 @import "partials/users";
+@import "partials/review";
 
 
 
