--- a/app/assets/stylesheets/refills/_navigation.scss
+++ b/app/assets/stylesheets/refills/_navigation.scss
@@ -16,7 +16,7 @@ header.navigation {
 
   background-color: $navigation-background;
   border-bottom: 1px solid darken($navigation-background, 10);
-  height: $navigation-height;
+//  height: $navigation-height;
   width: 100%;
   z-index: 999;
 
