betta styling here

--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -2,15 +2,12 @@
   @include outer-container;
   padding-top: 1em;
 
-  .home-welcome {
-    font: 800 64px/64px "Open Sans";
-    text-align: center;
-    margin-bottom: 1em;
+  .search-tools {
+    @include span-columns(12);
   }
 
-  .home-italic {
-    font: 400 60px/60px "gentium book basic";
-    font-style: italic;
+  .dropdown {
+    @include span-columns(12);
   }
 
 }
